# SimpleEmulatorCPU

./: CMakeLists.txt  README.md
include/: CPU.h  memory.h  registers.h
src/: CPU.cpp  main.cpp  memory.cpp  registers.cpp
